fix: removed scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,10 @@ body {
   font-family: proxima,sans-serif;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 /* * {
   border: 1px solid red;
 } */
